--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-fastapi>=0.70.0
-uvicorn[standard]>=0.15.0
-pydantic>=1.8.0
+PyYAML>=5.4
+fastapi>=0.85.0
+uvicorn>=0.18.0
+# 若使用 Python < 3.9，需安装 importlib_resources
+importlib_resources>=5.0
